# dick-compose

./: package.json  pnpm-lock.yaml  pyproject.toml  vite.config.ts
.github/workflows/: publish.yaml
scripts/linux/: build.sh
scripts/macos/: build.sh
scripts/windows/: build.ps1
src/: App.tsx
src-tauri/: Cargo.toml  pyproject.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src-python/deep_compose/: __init__.py  __main__.py  llm.py  models.py  prompt.py
src/components/Main/: Main.tsx
src/components/Main/Chat/: ChatInput.tsx  ChatMessages.tsx  PlanCard.tsx
src/components/Main/MusicPreview/: AbcViewer.tsx
src/components/Main/ProgressTracker/: ProgressTracker.tsx
src/contexts/: ApiKeyContext.tsx
src/pages/: HomePage.tsx  SetupPage.tsx
src/types/: index.ts
